[package]
name = "tether-map"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A no-std compatible linked hashmap implementation."
repository = "https://github.com/Jesterhearts/tether-map"
categories = [
    "data-structures",
    "hashmap",
    "no-std",
    "linked-list",
]
keywords = [
    "data-structures",
    "hashmap",
    "no-std",
    "linked-list",
]
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = [ "std" ]
std     = [  ]

[profile.release-with-debug]
inherits = "release"
debug    = "full"

[dependencies]
bumpalo   = "3.19.0"
hashbrown = { version = "0.16.0", default-features = false, features = [ "inline-more", "default-hasher" ] }

[dev-dependencies]
criterion = "0.7.0"
hashlink  = "0.10.0"
indexmap  = "2.11.0"
rand      = "0.9.2"

[[bench]]
name    = "common_benchmarks"
harness = false
