[package]
name = "tether-map"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Order-preserving linked hash map with O(1) reordering"
repository = "https://github.com/Jesterhearts/tether-map"
keywords = [
    "data-structures",
    "hashmap",
    "order-preserving",
    "linked-list",
    "no-std",
]
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default      = [ "std" ]
generational = [  ]
std          = [  ]

[profile.release-with-debug]
inherits = "release"
debug    = "full"

[dependencies]
bumpalo   = "3.19.0"
hashbrown = { version = "0.16.0", default-features = false, features = [ "inline-more", "default-hasher" ] }

[dev-dependencies]
criterion = "0.7.0"
hashlink  = "0.10.0"
indexmap  = "2.11.0"
rand      = "0.9.2"

[[bench]]
name    = "common_benchmarks"
harness = false
