[package]
name        = "tether-map"
version     = "0.2.1"
edition     = "2024"
description = "Order-preserving linked hash map with O(1) reordering"
readme      = "README.md"
repository  = "https://github.com/Jesterhearts/tether-map"
license     = "MIT OR Apache-2.0"
keywords    = [
  "data-structures",
  "hashmap",
  "linked-list",
  "no-std",
  "order-preserving",
]

[lib]
path = "src/lib.rs"

[[bench]]
harness = false
name    = "common_benchmarks"

[dependencies]
bumpalo   = "3.20.2"
hashbrown = { version = "0.17.0", default-features = false, features = [
  "default-hasher",
  "inline-more"
] }

[dev-dependencies]
criterion = "0.8.2"
hashlink  = "0.11.0"
indexmap  = "2.11.0"
rand      = "0.10.1"

[features]
default      = ["std"]
generational = []
std          = []

[profile.release-with-debug]
inherits = "release"
debug    = "full"
